...
    <string name="login_header">Login</string>
    <string name="login_userName_editText_hint">Username</string>
    <string name="login_password_editText_hint">Password</string>
    <string name="sign_password_editText_hint">Password (at least 6 characters)</string>
    <string name="show_password">Show password</string>
    <string name="dont_have_an_account">"Don't have an account?"</string>
    <string name="login_page_signUp_message">Sign up</string>
    <string name="login_button_text">LOGIN</string>
    <string name="sign_up_header">Sign Up</string>
    <string name="signup_full_name_hint">Full name</string>
    <string name="signup_phone_number_hint">Phone number</string>
    <string name="signup_email_address_hint">Email address</string>
    <string name="sign_up_button_text">Sign Up</string>
...
